RESOLVED FIXED201267
[GTK][WebRTC] webrtc/video-h264.html is failing
https://bugs.webkit.org/show_bug.cgi?id=201267
Summary [GTK][WebRTC] webrtc/video-h264.html is failing
Alicia Boya García
Reported 2019-08-28 18:21:39 PDT
webrtc/video-h264.html --- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/webrtc/video-h264-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/webrtc/video-h264-actual.txt @@ -1,5 +1,10 @@ +CONSOLE MESSAGE: Unhandled Promise Rejection: OperationError: Failed to set local offer sdp: Failed to set local video description recv parameters. +CONSOLE MESSAGE: line 77: addIceCandidate error: OperationError: Failed to apply the received candidate +CONSOLE MESSAGE: line 77: addIceCandidate error: OperationError: Failed to apply the received candidate + +Harness Error (FAIL), message = Failed to set local offer sdp: Failed to set local video description recv parameters. -PASS Baseline H264 -PASS High H264 +FAIL Baseline H264 assert_true: expected true got false +FAIL High H264 assert_true: expected true got false
Attachments
Philippe Normand
Comment 1 2022-07-13 03:23:41 PDT
EWS
Comment 2 2022-07-13 04:31:22 PDT
Committed 252409@main (906621c54f03): <https://commits.webkit.org/252409@main> Reviewed commits have been landed. Closing PR #2361 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.