[GTK][WebRTC] webrtc/video-h264.html is failing https://bugs.webkit.org/show_bug.cgi?id=201267

Reviewed by Carlos Garcia Campos.

Advertise constrained-baseline and high H.264 profiles in the GstWebRTC capabilities.

Drive-by: Refactor sframe test expectations in a single section.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:
(WebCore::gstreamerRtpCapatiblities):

Canonical link: https://commits.webkit.org/252409@main